tests/fixtures/invalid/undefined_variable.py
# Test undefined variable
print(undefined_var)
